#update center button Đăng ký

--- a/Views/LienCapTieuHocs/Create.cshtml
+++ b/Views/LienCapTieuHocs/Create.cshtml
@@ -331,8 +331,7 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <button onclick="createData()" value="Đăng ký" class="btn btn-primary"> Đăng ký </button>
-                        </div>
+                            <center><button onclick="createData()" value="Đăng ký" class="btn btn-primary"> Đăng ký </button></center>                        </div>
                     </div>
                     <br />
                 </div>
